Initial port to 1.18 [push]